--- a/main.tex
+++ b/main.tex
@@ -11,26 +11,7 @@
 \usepackage{hyperref} % For hyperlinks
 \usepackage{tabularx}
 \usepackage{fancyhdr}
-\usepackage{bibentry}
 \usepackage{fontawesome5} % For Icons
-
-% Publications (Bibtex List)
-\begin{filecontents}{publication.bib}
-@article{sarkar2024crop,
-  title={Crop Yield Prediction Using Multimodal Meta-Transformer and Temporal Graph Neural Networks},
-  author={Sarkar, Somrita and Dey, Anamika and Pradhan, Ritam and Sarkar, Upendra Mohan and Chatterjee, Chandranath and Mondal, Arijit and Mitra, Pabitra},
-  journal={IEEE Transactions on AgriFood Electronics},
-  year={2024},
-  publisher={IEEE}
-}
-@article{mitra2024comparative,
-  title={Comparative Study on NDVI Prediction using Advanced Deep Learning Architectures},
-  author={Mitra, Pabitra and Dey, Anamika and Sarkar, Somrita and Pradhan, Ritam and Mondal, Arijit},
-  journal={Elsevier Computers and Electronics in Agriculture},
-  year={2024},
-  publisher={Elsevier}
-}
-\end{filecontents}
 
 % Formatting
 \setlist{noitemsep} % Removes item separation
@@ -40,10 +21,6 @@
 
 % Begin document
 \begin{document}
-
-% Format style of publication
-\bibliographystyle{plain}
-\nobibliography{publication}
 
 % Disable page numbers
 \pagestyle{fancy}
@@ -187,11 +164,10 @@ Micro Specialization in Artificial Intelligence and Applications \\
 \noindent
 % Publication Status: In-Progress, Submitted, Reviewed, Published
 \begin{itemize}
-    \item \bibentry{sarkar2024crop} (Published)
-\end{itemize}
-\vspace{-0.3cm}
-\begin{itemize}
-    \item \bibentry{mitra2024comparative} (Submitted)
+  \item Somrita Sarkar, Anamika Dey, Ritam Pradhan, Upendra Mohan Sarkar, Chandranath Chatterjee, Arijit Mondal, Pabitra Mitra. Crop Yield Prediction Using Multimodal Meta-Transformer and Temporal Graph Neural Networks. 
+  \emph{IEEE Transactions on AgriFood Electronics}, 2024 (Published)
+  \item Pabitra Mitra, Anamika Dey, Somrita Sarkar, Ritam Pradhan, Arijit Mondal. Comparative study on ndvi prediction using advanced deep learning architectures.  
+  \emph{Elsevier Computers and Electronics in Agriculture}, 2024 (Submitted)
 \end{itemize}
 
 % Coursework Section
